            of its start and end points.  This is not visible to users
            (except in time and space savings), but is used to speed up 
            other primitive operations, specifically "for" loops such
            as \code{for (i in 1:1000000) ...}, and indexing of vectors
            such as \code{v[1000:2000]}.
      \item **39
      \item **40
      \item **41
      \item **42
      \item **43
      \item **44
      \item **45
      \item **46
      \item **47
      \item **48
      \item **49
      \item **50
      \item **51
      \item **52
      \item **53
      \item **54
      \item **55
      \item **56
      \item **57
      \item **58
      \item **59
      \item **60
      \item **61
      \item **62
      \item **63
      \item **64
      \item **65
      \item **66
      \item **67
      \item **68
      \item **69
      \item **70
      \item **71
      \item **72
      \item **73
      \item **74
      \item **75
      \item **76
      \item **77
      \item **78
      \item **79
      \item **80
      \item **81
      \item **82
      \item **83
      \item **84
      \item **85
      \item **86
      \item **87
      \item **88
      \item **89
      \item **90
      \item **91
      \item **92
      \item **93
      \item **94
      \item **95
      \item **96
      \item **97
      \item **98
      \item **99
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item The "debug" facility has been fixed.  Its behaviour for if,
            while, repeat, and for statements when the inner statement
            was or was not one with curly brackets had made no sense,
            and it had also displayed inappropriate expressions, and
            displayed things at the wrong time.  The new behaviour is
            now documented in help(debug).
      \item **2
      \item Fixed a small error-reporting bug with "$",
            illustrated by the following output:
\preformatted{
    > options(warnPartialMatchDollar=TRUE)