@@ -1,0 +1,16 @@
+The variant sequence operations that possibly return a range are used
+here to speed up subscripting of vectors and matrices.  For matrices,
+only the first index (for rows) is currently handled as a range (if
+possible). (Handling the column index as a range would be possible,
+but would provide a lesser speedup, due to data ordering, and to the
+loop over columns being the outer loop.)
+
+A missing row subscript for a matrix is also converted to a range from
+1 to the number of rows.
+
+Handling ranges without creating index vectors saves both time and
+space.
+
+Note that this change has no effect for accesses via compiled code,
+though the compiler could probably be modified to exploit this
+feature.
